:rotating_light: one way to fix one warning